# crappy-engine-thingy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  entry.cpp
include/: enginethingy.hpp
include/et/: core.hpp  entry.hpp  fast_hash.h  hash.hpp  logsystem.hpp  meta.hpp  object.hpp  pch.h  rng.hpp  scene_system.hpp  singleton.hpp  system.hpp  window_system.hpp
include/et/events/: application.hpp  event.hpp  event_system.hpp  keyboard.hpp  mouse.hpp  window.hpp
src/: core.cpp  entry.cpp  fast_hash.cpp  hash.cpp  logsystem.cpp  rng.cpp  scene_system.cpp  window_system.cpp
src/events/: event.cpp  event_system.cpp  window.cpp
tests/: events.cpp  hash.cpp  meta.cpp
